# fastapi-piccolo

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.dev.yml  sample.env
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
frontend/src/lib/: variables.js
frontend/src/routes/: index.svelte
piccolo-fastapi/: Dockerfile  app.py  config.py  dependencies.py  entrypoint.sh  main.py  piccolo_conf.py  pyproject.toml  requirements.txt
piccolo-fastapi/home/: endpoints.py
piccolo-fastapi/product/: models.py  piccolo_app.py  routers.py  tables.py
piccolo-fastapi/product/piccolo_migrations/: 2021-06-22T00-35-24.py
